--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -1,22 +1,22 @@
 
 a:link {
-  color: #fff;
+  color: #000;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 a:visited {
-    color: #fff;
+    color: #000;
 	text-decoration: none;
 }
 
 a:hover {
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
 a:active {
-    color: #fff;
+    color: #000;
 	text-decoration: none;
 }
 
@@ -88,7 +88,7 @@ a:active {
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #fff;
+  background: #000;
 }
 
 /*
@@ -121,7 +121,7 @@ a:active {
   padding: 50px;
   padding-top: 125px;
   
-  background: #000;
+  background: #EDC0FF;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
@@ -135,6 +135,7 @@ a:active {
 #menu li {
   padding: 10px 0;
   font-size: 22px;
+  font-family: 'Quicksand';
 }
 
 /*
