--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -2,19 +2,21 @@ body {
     width: 90%;
     margin: 0 auto;
     padding: 0;
-    font-family: "Quicksand", sans-serif;    
+     
 }
 
 header {
     margin-top: 55px;
     text-align: center;
-    font-size: 55px;
+    font-size: 95px;
+	font-family: "Dancing Script", sans-serif; 
+	color: #9F1DB2;
 }
 
 
 #calendar {
     margin-left: 195px;
-    margin-top: 60px;
+    margin-top: 50px;
     width: 200px;
     height: 200px;
 }
