--- a/public/assets/css/landingpage.css
+++ b/public/assets/css/landingpage.css
@@ -2,13 +2,17 @@ body {
     width: 90%;
     margin: 0 auto;
     padding: 0;
-    font-family: "Quicksand", sans-serif;
+  
 }
 
 header {
-    margin-top: 55px;
+    margin-top: 125px;
+	margin-left: 60px;
     text-align: center;
-    font-size: 55px;
+    font-size: 85px;
+	font-family: "Dancing Script", sans-serif;
+	color: #9F1DB2;
+	
 }
 
 h2 {
@@ -25,16 +29,39 @@ img {
 
 p {
     text-align: center;
+	color: white;
+	font-family: "Quicksand", sans-serif;
 }
 
 
+a:link {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+a:visited {
+    color: #fff;
+	text-decoration: none;
+}
+
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:active {
+    color: #fff;
+	text-decoration: none;
+}
+
 #box {      
-   margin-top: 255px;    
+   margin-top: 165px;
+   margin-left: 30px;	
    width: 375px;
    height: 215px;
    padding: 5px;    
-   border:1px solid green;
-    background: rgba(241,147,255,0.3);
-    
+   background: rgba(241,147,255,0.5);
+   
 }
 
