--- a/public/assets/css/landingpage.css
+++ b/public/assets/css/landingpage.css
@@ -31,6 +31,7 @@ p {
     text-align: center;
 	color: white;
 	font-family: "Quicksand", sans-serif;
+	font-weight: bold;
 }
 
 
@@ -56,11 +57,11 @@ a:active {
 }
 
 #box {      
-   margin-top: 165px;
+   margin-top: 65px;
    margin-left: 30px;	
    width: 375px;
    height: 215px;
-   padding: 5px;    
+   padding: 5px; 
    background: rgba(241,147,255,0.5);
    
 }
