--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -1,22 +1,22 @@
 body {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0;
      
 }
 
 header {
-    margin-top: 55px;
+    margin:  auto 55px;
     text-align: center;
     font-size: 95px;
 	font-family: "Dancing Script", sans-serif; 
 	color: #9F1DB2;
+    
 }
 
-
+.container{
+    margin: auto;
+    width: 100%;
+}
 #calendar {
-    margin-left: 195px;
-    margin-top: 50px;
-    width: 200px;
-    height: 200px;
+    margin: auto;
+    width: 100%;
+    height: auto;
 }
