--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -2,6 +2,11 @@ body {
     width: 90%;
     margin: 0 auto;
     padding: 0;
+	background: url(images/bees.jpeg) no-repeat; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
      
 }
 
