--- a/public/assets/css/recipes.css
+++ b/public/assets/css/recipes.css
@@ -8,3 +8,10 @@
 	color: white;
 
 }
+body { 
+  background: url(images/bees.jpeg) no-repeat; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
