--- a/public/assets/css/aboutus.css
+++ b/public/assets/css/aboutus.css
@@ -9,12 +9,13 @@
 /*---------------------Fade in jumbotron------------------*/
 #jumbotron {
   -webkit-animation-duration: 2s;
-  -webkit-animation-delay: 1s;
+  -webkit-animation-delay: .5s;
 /*  -webkit-animation-iteration-count: infinite;*/
-	margin-top: 225px;
+	margin-top: 15px;
 	background: rgba(255,255,255,0.7);
 	
 }
+
 body { 
   background: url(images/bees.jpeg) no-repeat; 
   -webkit-background-size: cover;
