Mobile responsive but BACKGROUND ISSUE AGAIN!

--- a/public/assets/css/adminstyle.css
+++ b/public/assets/css/adminstyle.css
@@ -20,3 +20,30 @@ button.edit {
 .top-30 {
   margin-top: 30px;
 }
+
+/*	-----------------MEDIA For devices 400px and larger:-------------------*/
+@media only screen and (min-device-width: 400px) {
+	
+button.submit {
+  float: right;
+  background: black;
+}
+
+form#cms {
+  margin-top: 50px;
+}
+
+#cms textarea {
+  resize: none;
+}
+
+.panel-heading button.delete,
+button.edit {
+  float: right;
+  margin: 5px;
+}
+
+.top-30 {
+  margin-top: 30px;
+}
+}
