--- a/public/assets/css/recipes.css
+++ b/public/assets/css/recipes.css
@@ -15,3 +15,5 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+/*	-----------------MEDIA For devices 400px and larger:-------------------*/
+@media only screen and (min-device-width: 400px) {}
