--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -14,32 +14,31 @@
 	background: rgba(255,255,255,0.7);
 }
 body {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
     padding: 0;
-	background: url(../images/bees.jpeg) no-repeat; 
+	background: url(images/bees.jpeg) no-repeat; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
- }
-
-
+     
+}
 
 
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
 @media only screen and (min-device-width: 400px) {
-body { 
-		width: 100%;
-		margin: 0 auto;
-		padding: 0;
-		background-image: url('../images/bees.jpeg'); 
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover;
+body {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0;
+	background: url(images/bees.jpeg) no-repeat; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+     
 }
-	
 #npBtn {
 color: white;
 background: black;
@@ -57,5 +56,5 @@ background: black;
 
 	padding: 20px;
 	background: rgba(255,255,255,0.7);
-}
+}	
 }
