--- a/public/assets/css/aboutus.css
+++ b/public/assets/css/aboutus.css
@@ -34,6 +34,18 @@ body {
 	left: 60px;
 	position: relative;
 }
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
+}
 
 /*	-----------------MEDIA For phonesr:-------------------*/
 @media only screen and (max-width: 768px) {
@@ -77,5 +89,18 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+	
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
 }
