--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -24,6 +24,18 @@ body {
 	background-size: cover;
      
 }
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
+}
 
 
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
@@ -57,4 +69,16 @@ background: black;
 	padding: 20px;
 	background: rgba(255,255,255,0.7);
 }	
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
+}
 }
