--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -29,6 +29,18 @@ header {
     width: 100%;
     height: auto;
 }
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
+}
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
 @media only screen and (min-device-width: 400px) {
 
@@ -62,5 +74,18 @@ header {
     margin: auto;
     width: 100%;
     height: auto;
+}
+
+footer {
+		color: white;
+		font-family: "Quicksand", sans-serif;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		padding: 1rem;
+		text-align: center;
+		text-shadow: 2px 2px black; 
+/*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
 }
