--- a/public/assets/css/recipes.css
+++ b/public/assets/css/recipes.css
@@ -19,8 +19,9 @@ header {
 	text-shadow: 2px 2px #000;
 }
 
-h3{
+h3 {
     font-family: "Quicksand", sans-serif;
+	font-size: 12px;
 }
 
 body { 
@@ -31,13 +32,13 @@ body {
   background-size: cover;
 }
 
- .container{
+.container {
    margin-top: 25px;
    margin-left: 30px;	
    width: 375px;
    height: 775px;
    padding: 5px; 
-   background: rgba(255,255,255,0.7);
+/*   background: rgba(255,255,255,0.7);*/
 }
 #banana{
 
@@ -63,6 +64,7 @@ footer {
 		text-shadow: 2px 2px black; 
 /*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
+
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
 @media only screen and (min-device-width: 400px) {
   #searchBar {
@@ -89,7 +91,7 @@ body {
    width: 375px;
    height: 775px;
    padding: 5px; 
-   background: rgba(255,255,255,0.7);
+/*   background: rgba(255,255,255,0.7);*/
 }
 
 #banana{
@@ -117,6 +119,7 @@ header {
 
 h3{
     font-family: "Quicksand", sans-serif;
+	font-size: 12px;
 }
 footer {
 		color: white;
