--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -27,7 +27,7 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: absolute;
+		position: relative;
 		right: 0;
 		bottom: 0;
 		left: 0;
