--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -27,16 +27,19 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: relative;
+		position: absolute;
 		right: 0;
 		bottom: 0;
-		left: 0;
+        clear: both;
 		padding: 1rem;
 		text-align: center;
 		text-shadow: 2px 2px black; 
 /*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
+.hr-color{
+    border: 1px solid #9F1DB2;
 
+}
 
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
 @media only screen and (min-device-width: 400px) {
@@ -79,6 +82,7 @@ footer {
 		padding: 1rem;
 		text-align: center;
 		text-shadow: 2px 2px black; 
+        clear: both;
 /*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
 }
