--- a/public/assets/css/aboutus.css
+++ b/public/assets/css/aboutus.css
@@ -24,6 +24,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100%;
+  padding-bottom: 10%;
 }
 
 #title {
@@ -37,13 +39,13 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: relative;
+		position: fixed;
 		right: 0;
 		bottom: 0;
 		left: 0;
-		padding: 1rem;
+		/*padding: 1rem;*/
 		text-align: center;
-		text-shadow: 2px 2px black; 
+		text-shadow: 2px 2px black;
         clear: both;
 /*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
