--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -42,6 +42,10 @@ footer {
 
 }
 
+.blogId{
+    display: none;
+}
+
 /*	-----------------MEDIA For devices 400px and larger:-------------------*/
 @media only screen and (min-device-width: 400px) {
 body {
