--- a/public/assets/css/aboutus.css
+++ b/public/assets/css/aboutus.css
@@ -39,7 +39,7 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: fixed;
+		position: relative;
 		right: 0;
 		bottom: 0;
 		left: 0;
@@ -97,7 +97,7 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: absolute;
+		position: relative;
 		right: 0;
 		bottom: 0;
 		left: 0;
