--- a/public/assets/css/userBlog.css
+++ b/public/assets/css/userBlog.css
@@ -57,7 +57,7 @@ body {
 footer {
 		color: white;
 		font-family: "Quicksand", sans-serif;
-		position: absolute;
+		position: relative;
 		right: 0;
 		bottom: 0;
 		left: 0;
