--- a/public/assets/css/landingpage.css
+++ b/public/assets/css/landingpage.css
@@ -63,9 +63,10 @@ a:active {
 
 #box {      
    margin-top: 65px;
-   margin-left: 30px;	
+   margin-left: 30px;
+   margin-bottom: 20px;
    width: 375px;
-   height: 215px;
+   height: auto;
    padding: 5px; 
    background: rgba(241,147,255,0.5);
    
