--- a/public/assets/css/landingpage.css
+++ b/public/assets/css/landingpage.css
@@ -155,11 +155,11 @@ a:active {
 #box {      
    margin-top: 65px;
    margin-left: 30px;	
-   width: 375px;
-   height: 215px;
+   width: 100%;
+   height: 70%;
    padding: 5px; 
    background: rgba(241,147,255,0.5);
-   
+      
 }
 
 footer {
@@ -172,6 +172,7 @@ footer {
 		padding: 1rem;
 		text-align: center;
 		text-shadow: 2px 2px black; 
+        padding-top: 10%
 /*	background: rgba(255,255,255,0.7); use only if you want to add the translucent box*/
 }
 
