--- a/public/assets/css/blogstyle.css
+++ b/public/assets/css/blogstyle.css
@@ -8,7 +8,12 @@
 #topBar {
 	margin: 30px;
 }
-#box {
+#blogbox {
+	
+	padding: 20px;
+	background: rgba(255,255,255,0.7);
+}
+#commentbox {
 	
 	padding: 20px;
 	background: rgba(255,255,255,0.7);
@@ -73,7 +78,12 @@ background: black;
 	margin: 30px;
 }
 	
-#box {
+#blogbox {
+
+	padding: 20px;
+	background: rgba(255,255,255,0.7);
+}
+#commentbox {
 
 	padding: 20px;
 	background: rgba(255,255,255,0.7);
