--- a/views/blog.html
+++ b/views/blog.html
@@ -21,6 +21,16 @@
 			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
 			<meta name="viewport" content="width=device-width, initial-scale=1">
+        
+                   <!--  Bootstrap for Modals -->
+        
+<!--            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+        
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+                    
+            <!-- End Modal Bootstrap --> 
 	</head>
 
 	
@@ -57,26 +67,52 @@
 		
 
 	<div class="col-md-2 col-sm-2">
-		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
-	</div>
-
+		              <!-- ************************* Modal ************************************** -->
+        <button type="button" id="npBtn" class="btn btn-primary" data-toggle="modal" data-target="#cms">New Post</button>
+    </div>
 </div>
+    <div class="modal fade" id="cms" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 id = "modalTitle" class="modal-title">New Blog</h4>
+                </div>
+                <div class="modal-body">
+                    <div id="newPostForm" class="form-group">
+                        <label for="newPostTitle" class="form-control-label">Blog Title:</label>
+                        <input type="text" class="form-control postInput" id="newPostTitle">
+                        <br>
+                        <label for="newPostBody" class="form-control-label">Blog Body:</label>
+                        <textarea class="form-control postInput" id="newPostBody"></textarea>
+                        <br>
+                        
+         
+                <div class="modal-footer">
+                    <button data-key="new" type="button" class="btn btn-primary" id="submitPost">Submit</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="closePost">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+   <!-- **********************************  End Modal ******************************* --> 
+	
 
-<div class="div" id="box">
+<div class="div" id="blogbox">
 	<div class="row">
 		<div class="col-md-12 blog-container" id="post">
 		</div>
 	</div>
 </div>	
     <br>
-    <div class="div" id="box">
+    <div class="div" id="commentbox">
 	<div class="row">
 		<div class="col-md-12 comment-container" >
 		</div>
 	</div>
-</div>	
-<!--comment section-->
-    <form>
+        <form>
     User Name:<br>
     <input type="text" name="userName" placeholder="Enter Your User Name" id="user">
         <br>
@@ -85,6 +121,9 @@
         <br>
     <input type="submit" id="cSubmit">
     </form>
+</div>	
+<!--comment section-->
+    
 </div>
 	
     <footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
@@ -92,6 +131,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
     <script src="assets/js/blogs.js"></script>	
     <script src="assets/js/sidebar.js"></script>
+    <script src="assets/js/cms.js"></script>
     <script type="text/javascript" src="assets/js/comments.js"></script>
     <script type="text/javascript" src="assets/js/commentcms.js"></script>
 
