--- a/views/events.html
+++ b/views/events.html
@@ -22,7 +22,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>   
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
  <link rel="stylesheet" href="assets/css/calendar.css"/>
- 
+ <!--  Bootstrap for Modals -->
+        
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+                    
+            <!-- End Modal Bootstrap --> 
+  
     </head>
     
   <body style="background-image: url(assets/images/bees.jpeg)">
@@ -55,9 +64,58 @@
         
 <header class="animated rollIn">Events</header>      
 
+      
+      <!-- ************************* Modal ************************************** -->
+<!--
+        <button type="button" id="neBtn" class="btn btn-primary" data-toggle="modal" data-target="#cms">New Event</button>
+    <div class="modal fade" id="cms" role="dialog">
+        <div class="modal-dialog">
+             Modal content
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 id = "modalTitle" class="modal-title">New Event</h4>
+                </div>
+                <div class="modal-body">
+                    <div id="newEventForm" class="form-group">
+                        <label for="newEventTitle" class="form-control-label">Event Title:</label>
+                        <input type="text" class="form-control eventInput" id="newEventTitle">
+                        <br>
+                        <label for="newEventBody" class="form-control-label">Event Information:</label>
+                        <textarea class="form-control eventInput" id="newEventBody"></textarea>
+                        <br>
+
+                        <input id="neMonth" type="text" name="daterange" value=""/>
+                        <input id="neDay" type="text" name="daterange" value=""/>
+                        <input id="neYear" type="text" name="daterange" value=""/>
+                       <div class="input-append date form_datetime">
+                        <input size="16" type="text" value="" readonly>
+                        <span class="add-on"><i class="icon-th"></i></span>
+                           
+                           
+                        </div>
+
+                        <br>
+         
+                <div class="modal-footer">
+                    <button data-key="new" type="button" class="btn btn-primary" id="submitPost">Submit</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="closePost">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+-->
+   <!-- **********************************  End Modal ******************************* -->     
+   
+      
+      
+      
+      
 <div class="container">
 
 	<div id="calendar">
+        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23993399&amp;src=9kjcekh9ba699bhqpp3de3v0h8%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
 </div>
@@ -65,7 +123,7 @@
     <footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
         
 <script src="assets/js/sidebar.js"></script>  
-      <script type="text/javascript" src="assets/js/caleandar.js"></script>
+<!--      <script type="text/javascript" src="assets/js/caleandar.js"></script>-->
     <script type="text/javascript" src="assets/js/events.js"></script>
     
  </body>
