--- a/views/blog.html
+++ b/views/blog.html
@@ -62,8 +62,9 @@
 
 <div class="container">
 	<div class="row top-30" id="topBar">
-		<div class="col-md-4 col-sm-2"></div>
-		<div class="col-md-6 col-sm-2"></div>
+		<div class="col-md-2 col-sm-2"></div>
+		<div class="col-md-8 col-sm-2">
+            <header>Blog</header></div>
 		
 
 	<div class="col-md-2 col-sm-2">
@@ -112,16 +113,17 @@
 		<div class="col-md-12 comment-container" >
 		</div>
 	</div>
-        <form>
-    User Name:<br>
+   <div id="input"><form>
+       <div id="input">User Name:<br></div>
     <input type="text" name="userName" placeholder="Enter Your User Name" id="user">
         <br>
-    Comments:<br>
+       <div id="input" >Comments:<br></div>
         <textarea type="text" Name="comment" rows="4" cols="50" placeholder="Enter your Comment" id="body"></textarea>
         <br>
-    <input type="submit" id="cSubmit">
+       <div id="input"><input type="submit" id="cSubmit"></div>
     </form>
 </div>	
+    </div>        
 <!--comment section-->
     
 </div>
