--- a/public/assets/css/recipes.css
+++ b/public/assets/css/recipes.css
@@ -11,7 +11,8 @@
 
 header {
     margin-top: 10px;
-	margin-left: 85px;
+	margin-left: auto;
+	margin-right: auto;
     text-align: center;
     font-size: 85px;
 	font-family: "Dancing Script", sans-serif;
@@ -112,7 +113,8 @@ body {
 /*----------*/
 header {
     margin-top: 15px;
-	margin-left: 85px;
+	margin-left: auto;
+	margin-right: auto;
     text-align: center;
     font-size: 85px;
 	font-family: "Dancing Script", sans-serif;
